Made further adjustments to portfolio buttons to solve alignment issues

--- a/layout/_portfolio.scss
+++ b/layout/_portfolio.scss
@@ -30,7 +30,6 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 20%;
   }
 
   &__btn {
@@ -41,7 +40,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    min-width: 150px;
+    min-width: 200px;
   }
 
   &__btn-icon {
