--- a/main.css
+++ b/main.css
@@ -144,7 +144,6 @@ header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding-left: 20%;
 }
 .portfolio__btn {
   color: #ffec8b;
@@ -154,7 +153,7 @@ header {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  min-width: 150px;
+  min-width: 200px;
 }
 .portfolio__btn-icon {
   padding-right: 5px;
